fixed badge scaling on firefox
Fixed badge scaling on firefox. Badge widths now maintain a consistent 16%
width on desktop. This prevents the issue where some were appearing larger and
some were appearing smaller. This is not a perfect solution and should be
replaced by a more maintainable one in the future.

--- a/app/styles/badges/_badges.scss
+++ b/app/styles/badges/_badges.scss
@@ -65,6 +65,13 @@
 	@media (min-width: $tablet-width) {
 		margin-right: 12px;
 		width: 32%;
+
+		// HACK
+		// This is a dirty filthy hack. It is done so that the badges on the
+		// "Find Out More" Screen remain a consistent size. This is not a
+		// scalable solution and should be fixed if we ever get the chance.
+		min-width: 16%; 
+
 		display: inline-block;
 		float: left;
 	}
